--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "cross-env NODE_ENV=production webpack",
     "server:dev":"webpack-dev-server",                
 
+    "postinstall": "npm run bulid",
+
     "dev": "cross-env NODE_ENV=development nodemon back-end/index.js --ignore front-end",
     "start": "cross-env NODE_ENV=production node back-end/index.js"
   },
